# scotty

./: README.md  pyproject.toml
src/scotty/: main.py
